examples/pos/handler_without_annotations.effekt
module handler_without_annotations

effect Emit(n: Int): Unit

def main() = try { () } handle {
  case Emit(n) => resume(())
}
