examples/neg/unhandledmain.effekt
module unhandledmain

effect Flip(): Boolean

def main() = do Flip()